Optimize waits and execution time